<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/paper_1"
    android:orientation="vertical">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:dither="true"
        android:tileMode="repeat"
        tools:context="com.geekyquiz.EasyC">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txtQno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/txtQno"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#2D5C5A"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txttimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="10:00"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#000000"
                    android:textSize="12sp" />


                <ScrollView
                    android:id="@+id/scrollView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/txtQues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtQues"
                        android:textAlignment="center"
                        android:textColor="#3F51B5"
                        android:textSize="14sp" />

                </ScrollView>


                <ScrollView
                    android:id="@+id/scrollView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.58">

                        <RadioButton
                            android:id="@+id/radioAns1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:padding="5dp"
                            android:text="@string/rad1"
                            android:textColor="#2D5C5A"
                            android:textSize="14sp" />

                        <RadioButton
                            android:id="@+id/radioAns2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/rad2"
                            android:textColor="#2D5C5A" />

                        <RadioButton
                            android:id="@+id/radioAns3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/rad3"
                            android:textColor="#2D5C5A" />

                        <RadioButton
                            android:id="@+id/radioAns4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/rad4"
                            android:textColor="#2D5C5A" />

                    </RadioGroup>

                </ScrollView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#03A9F4"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onsubmitbuttonclick"
            android:text="@string/btnsbm"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button5"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#03A9F4"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onbuttonclick"
            android:text="@string/btnNext"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>
